--- a/CoreSupply.Catalog.API/Dockerfile
+++ b/CoreSupply.Catalog.API/Dockerfile
@@ -1,29 +1,30 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
-WORKDIR /app
-EXPOSE 8080
-
-
-# This stage is used to build the service project
+﻿# Dockerfile for CoreSupply.Quote.API
+#
+# Stage 1: Build the application
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+# 👆 این مسیر داخلی کانتینر است و باید باقی بماند
+
+# 1. Copy Solution File (.sln) and all Project Files (.csproj)
+# مسیر کپی کردن از کامپیوتر شما به داخل کانتینر:
+COPY ["CoreSupply.sln", "."]
+COPY ["CoreSupply.Quote.API/CoreSupply.Quote.API.csproj", "CoreSupply.Quote.API/"]
 COPY ["CoreSupply.Catalog.API/CoreSupply.Catalog.API.csproj", "CoreSupply.Catalog.API/"]
-RUN dotnet restore "./CoreSupply.Catalog.API/CoreSupply.Catalog.API.csproj"
+
+
+# 2. Restore dependencies
+RUN dotnet restore "CoreSupply.Quote.API/CoreSupply.Quote.API.csproj"
+
+# 3. Copy the rest of the source code
 COPY . .
-WORKDIR "/src/CoreSupply.Catalog.API"
-RUN dotnet build "./CoreSupply.Catalog.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./CoreSupply.Catalog.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+# 4. Publish the project
+WORKDIR /src/CoreSupply.Quote.API
+RUN dotnet publish "CoreSupply.Quote.API.csproj" -c Release -o /app/publish
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
-FROM base AS final
+# Stage 2: Publish the application (Final Image)
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "CoreSupply.Catalog.API.dll"]
+# Copy the published output from the build stage
+COPY --from=build /app/publish .
+ENTRYPOINT ["dotnet", "CoreSupply.Quote.API.dll"]
