--- a/CoreSupply.Quote.API/CoreSupply.Quote.API.csproj
+++ b/CoreSupply.Quote.API/CoreSupply.Quote.API.csproj
@@ -9,9 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.2.5" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CoreSupply.BuildingBlocks\CoreSupply.BuildingBlocks.csproj" />
   </ItemGroup>
 
 </Project>
