feat(observability): implement centralized logging with Serilog & Seq
- Configured Seq server in Docker Compose for log aggregation.
- Implemented `LoggingExtensions` in BuildingBlocks for standardized logging configuration.
- Integrated Serilog across all microservices (Identity, Catalog, Basket, Ordering, Gateway).
- Enabled structured logging with correlation IDs and machine name enrichment.
- Verified end-to-end log tracing in Seq dashboard.

--- a/CoreSupply.APIGateway/Dockerfile
+++ b/CoreSupply.APIGateway/Dockerfile
@@ -1,36 +1,33 @@
-﻿# مرحله اول: استفاده از ایمیج SDK برای ساخت (Build)
+﻿# Stage 1: Runtime (Base)
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+WORKDIR /app
+EXPOSE 8080
+
+# Stage 2: Build (SDK)
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# 1. کپی فایل Solution
-# Solution در ریشه کانتینر (/src) کپی می‌شود.
-COPY CoreSupply.sln .
+# 1. Copy Project Files
+COPY ["CoreSupply.APIGateway/CoreSupply.APIGateway.csproj", "CoreSupply.APIGateway/"]
+COPY ["CoreSupply.BuildingBlocks/CoreSupply.BuildingBlocks.csproj", "CoreSupply.BuildingBlocks/"]
 
-# 2. کپی فایل‌های پروژه (.csproj) برای بازیابی وابستگی‌ها (Restore)
-# 🎯 FIX: مسیردهی اکنون به صورت "ProjectFolder/ProjectFile.csproj" است (بدون src/).
-COPY CoreSupply.APIGateway/CoreSupply.APIGateway.csproj CoreSupply.APIGateway/
-COPY CoreSupply.Catalog.API/CoreSupply.Catalog.API.csproj CoreSupply.Catalog.API/
-COPY CoreSupply.Quote.API/CoreSupply.Quote.API.csproj CoreSupply.Quote.API/
+# 2. Restore Dependencies
+RUN dotnet restore "./CoreSupply.APIGateway/CoreSupply.APIGateway.csproj"
 
-# اجرای Restore (بازیابی وابستگی‌ها)
-RUN dotnet restore CoreSupply.APIGateway/CoreSupply.APIGateway.csproj
-
-# 3. کپی کردن تمام فایل‌های سورس (از ریشه Build)
-# تمام پوشه‌های پروژه (CoreSupply.APIGateway، CoreSupply.Catalog.API و CoreSupply.Quote.API) کپی می‌شوند.
+# 3. Copy Source Code
 COPY . .
 
-# 4. انتشار (Publish) پروژه به حالت Release
-# 🎯 FIX: WORKDIR اکنون به مسیر صحیح داخل کانتینر تنظیم شده است.
+# 4. Build & Publish
 WORKDIR "/src/CoreSupply.APIGateway"
-RUN dotnet publish "CoreSupply.APIGateway.csproj" -c Release -o /app/publish
+RUN dotnet build "./CoreSupply.APIGateway.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# مرحله دوم: استفاده از ایمیج کم‌حجم‌تر و بهینه‌شده برای اجرا (Runtime)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
+FROM build AS publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./CoreSupply.APIGateway.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+# Stage 3: Final
+FROM base AS final
 WORKDIR /app
-EXPOSE 80
-
-# کپی کردن فایل‌های منتشر شده از مرحله Build
-COPY --from=build /app/publish .
-
-# اجرای برنامه
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "CoreSupply.APIGateway.dll"]
