--- a/CoreSupply.APIGateway/CoreSupply.APIGateway.csproj
+++ b/CoreSupply.APIGateway/CoreSupply.APIGateway.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoreSupply.BuildingBlocks\CoreSupply.BuildingBlocks.csproj" />
+  </ItemGroup>
+
 </Project>
