--- a/CoreSupply.BuildingBlocks/CoreSupply.BuildingBlocks.csproj
+++ b/CoreSupply.BuildingBlocks/CoreSupply.BuildingBlocks.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
