feat(auth): enforce RBAC and secure endpoints with JWT validation - Implemented Role-Based Access Control (RBAC) in Ordering API. - Secured `admin/all-orders` endpoint to require 'Admin' role. - Configured JWT Bearer authentication in Ordering API with shared secret key. - Added Swagger security definition for easy testing of secured endpoints. - Verified 403 Forbidden response for unauthorized users.

--- a/CoreSupply.Ordering.API/appsettings.json
+++ b/CoreSupply.Ordering.API/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  "JwtSettings": {
+    "Secret": "ThisIsTheSecureKeyForCoreSupplyProject2025!",
+    "Issuer": "CoreSupplyIdentity",
+    "Audience": "CoreSupplyClients"
+  }
+
+
+
+
 }
